Added hero and nav.

--- a/style.html
+++ b/style.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include header.html %}
+
 <h1>h1 Featured content</h1>
 <h2>h2 Reputation</h2>
 <h3>h3 Home situations about</h3>
