--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@ layout: no-nav
 <header>
   <div class="cover bg-left bg-center-l" style="background-image: url({{site.baseurl }}/images/manhattan-407703.jpg)">
     <div class="bg-black-70">
-      <nav class="dt w-100 mw8 center">
-        <div class="dtc w2 v-mid pa3">
-          <a href="/" class="dib w2 h2 pa1 grow">
-            <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
-          </a>
+
+      <nav class="db dt-l w-100 border-box pa3 ph5-l">
+        <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+          <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
+        </a>
+        <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
+          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Home">Home</a>
+          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="How it Works">Situations</a>
+          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Blog">About</a>
+          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Press">Contact</a>
+          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Contact">Our people</a>
         </div>
-
-  <div class="db dtc-l v-top w-100 w-75-l tc tr-l pt3-l">
-    <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Home">Home</a>
-    <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Situations">Situations</a>
-    <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="About">About</a>
-    <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Contact">Contact</a>
-    <a class="ash-sans link dim white f6 f5-l dib ttu" href="#" title="Our people">Our people</a>
-  </div>
-
       </nav>
+
       <div class="mt6 ph3">
         <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
