--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ layout: no-nav
   <div class="cover bg-left bg-center-l" style="background-image: url({{site.baseurl }}/images/manhattan-407703.jpg)">
     <div class="bg-black-70">
 
-      <nav class="db dt-l w-100 border-box pa3 ph5-l">
+      <nav class="db dt-l w-100 border-box pa3 ph3-l">
         <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
           <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
         </a>
-        <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
+        <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
           <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Home">Home</a>
           <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="How it Works">Situations</a>
           <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Blog">About</a>
@@ -19,7 +19,7 @@ layout: no-nav
         </div>
       </nav>
 
-      <div class="mt6 ph3">
+      <div class="mt4 mt6-l ph3 tc tl-l">
         <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
         <a class="f6 no-underline grow dib v-mid white ba b--white ph3 pv2 mb3" href="">Call to action</a>
