--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@ layout: no-nav
     <div class="bg-black-70">
 
       <nav class="db dt-l w-100 border-box pa3 ph3-l">
-        <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+        <a class="db dtc-l v-mid mid-gray link grow w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
           <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
         </a>
         <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
-          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Home">Home</a>
-          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="How it Works">Situations</a>
-          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Blog">About</a>
-          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Press">Contact</a>
-          <a class="ash-sans link dim white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Contact">Our people</a>
+          <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Home">Home</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="How it Works">Situations</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Blog">About</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Press">Contact</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Contact">Our people</a>
         </div>
       </nav>
 
@@ -27,3 +27,5 @@ layout: no-nav
     </div>
   </div>
 </header>
+
+<p class="pa2 pa4-l tc-l">The world of communications has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media, spawning an explosion of unregulated channels. Faced with an array of sources, consumers can’t tell the difference between marketing, news, propaganda and disinformation. Privacy and confidentiality are under threat. Activist journalism is seeing a renaissance, but so too is paid content. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>. Trust in authority, leaders and companies is at an historic low. Ashbright was created to help companies, individuals and governments survive and thrive in this new environment.</p>
