--- a/index.html
+++ b/index.html
@@ -28,4 +28,56 @@ layout: no-nav
   </div>
 </header>
 
-<p class="pa2 pa4-l tc-l">The world of communications has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media, spawning an explosion of unregulated channels. Faced with an array of sources, consumers can’t tell the difference between marketing, news, propaganda and disinformation. Privacy and confidentiality are under threat. Activist journalism is seeing a renaissance, but so too is paid content. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>. Trust in authority, leaders and companies is at an historic low. Ashbright was created to help companies, individuals and governments survive and thrive in this new environment.</p>
+<h2 class="ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
+<p class="ph2 ph4-l tc-l">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
+
+
+         <p class="ph2 ph4-l tc-l">Ashbright helps companies, individuals and governments survive and thrive in this new environment</p>
+
+<div class="dt-ns dt--fixed-ns">
+  <div class="dtc-ns tc pv4">
+    <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
+    <img src="http://placekitten.com/g/600/300" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+    <div class="pa2 ph3-ns pb3-ns">
+      <div class="dt w-100 mt1">
+        <div class="dtc">
+          <h2 class="f5 f4-ns mv0 ashblue ttu">Protect your reputation</h2>
+        </div>
+      </div>
+      <p class="f6 lh-copy measure mt2 mid-gray">
+        With the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright helps high-profile individuals and corporate leaders to take control of their public profile, online and offline
+      </p>
+    </div>
+    </article>
+  </div>
+  <div class="dtc-ns tc pv4">
+    <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
+    <img src="http://placekitten.com/g/600/300" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+    <div class="pa2 ph3-ns pb3-ns">
+      <div class="dt w-100 mt1">
+        <div class="dtc">
+          <h2 class="f5 f4-ns mv0 ashblue ttu">Manage a crisis</h2>
+        </div>
+      </div>
+      <p class="f6 lh-copy measure mt2 mid-gray">
+        You will not be judged by the crises you face, but how you manage them. In the social media age, there is no time to waste when crisis hits. Whether a leadership succession, litigation, accident or personal crisis, you need to act fast and smart to manage expectations and turn a crisis into an opportunity.
+      </p>
+    </div>
+    </article>
+  </div>
+  <div class="dtc-ns tc pv4">
+    <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
+    <img src="http://placekitten.com/g/600/300" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+    <div class="pa2 ph3-ns pb3-ns">
+      <div class="dt w-100 mt1">
+        <div class="dtc">
+          <h2 class="f5 f4-ns mv0 ashblue ttu">Bring about change</h2>
+        </div>
+      </div>
+      <p class="f6 lh-copy measure mt2 mid-gray">
+        Poor communication is one of the main causes of failure in change programmes. Ashbright has decades of experience working alongside senior leaders and management consultants on restructuring programmes to define strategy, engage stakeholders, overcome resistance and meet project deadlines.
+      </p>
+    </div>
+    </article>
+  </div>
+</div>
