Change images from kittens to stock.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: no-nav
 <div class="dt-ns dt--fixed-ns">
   <div class="dtc-ns tc pv4">
     <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
-    <img src="http://placekitten.com/g/600/300" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+    <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
     <div class="pa2 ph3-ns pb3-ns">
       <div class="dt w-100 mt1">
         <div class="dtc">
@@ -52,7 +52,7 @@ layout: no-nav
   </div>
   <div class="dtc-ns tc pv4">
     <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
-    <img src="http://placekitten.com/g/600/300" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+    <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
     <div class="pa2 ph3-ns pb3-ns">
       <div class="dt w-100 mt1">
         <div class="dtc">
@@ -67,7 +67,7 @@ layout: no-nav
   </div>
   <div class="dtc-ns tc pv4">
     <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
-    <img src="http://placekitten.com/g/600/300" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+    <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
     <div class="pa2 ph3-ns pb3-ns">
       <div class="dt w-100 mt1">
         <div class="dtc">
