Added buttons on home and changed hero call to action button.

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@ layout: no-nav
       <div class="mt4 mt6-l ph3 tc tl-l">
         <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
-        <a class="f6 no-underline grow dib v-mid white ba b--white ph3 pv2 mb3" href="">Call to action</a>
+        <a class="ash-sans f5 link grow ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Call to action</a>
       </div>
     </div>
   </div>
 </header>
 
-<h2 class="ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
+<h2 class="f1 ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
 <p class="ph2 ph4-l tc-l">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
 
 
          <p class="ph2 ph4-l tc-l">Ashbright helps companies, individuals and governments survive and thrive in this new environment</p>
 
 <div class="dt-ns dt--fixed-ns">
-  <div class="dtc-ns tc pv4">
-    <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
+  <div class="dtc-ns tc pt4">
+    <article class="br2 ba dark-gray b--black-10 mt4 w-100 mw5 center">
     <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
     <div class="pa2 ph3-ns pb3-ns">
       <div class="dt w-100 mt1">
@@ -50,8 +50,8 @@ layout: no-nav
     </div>
     </article>
   </div>
-  <div class="dtc-ns tc pv4">
-    <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
+  <div class="dtc-ns tc pt4">
+    <article class="br2 ba dark-gray b--black-10 mt4 w-100 mw5 center">
     <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
     <div class="pa2 ph3-ns pb3-ns">
       <div class="dt w-100 mt1">
@@ -65,8 +65,8 @@ layout: no-nav
     </div>
     </article>
   </div>
-  <div class="dtc-ns tc pv4">
-    <article class="br2 ba dark-gray b--black-10 mv4 w-100 mw5 center">
+  <div class="dtc-ns tc pt4">
+    <article class="br2 ba dark-gray b--black-10 mt4 w-100 mw5 center">
     <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
     <div class="pa2 ph3-ns pb3-ns">
       <div class="dt w-100 mt1">
@@ -81,3 +81,9 @@ layout: no-nav
     </article>
   </div>
 </div>
+
+  <div class="tc mv4">
+    <a class="ash-sans f5 link grow ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
+
+    <a class="ash-sans f5 link grow ph3 pv2 mb2 dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
+  </div>
