--- a/index.html
+++ b/index.html
@@ -28,59 +28,65 @@ layout: no-nav
   </div>
 </header>
 
-<h2 class="f1 ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
-<p class="ph2 ph4-l tc-l">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
+<section class="mw5 mw7-ns center pa3-l ph5-ns">
+  <h2 class="f1 ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
 
+  <p class="f3 ph2 ph4-l tc-l lh-copy">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
 
-         <p class="ph2 ph4-l tc-l">Ashbright helps companies, individuals and governments survive and thrive in this new environment</p>
+  <p class="f3 ph2 ph4-l tc-l lh-copy">Ashbright helps companies, individuals and governments survive and thrive in this new environment</p>
+</section>
 
-<div class="dt-ns dt--fixed-ns">
-  <div class="dtc-ns tc pt4">
-    <article class="br2 ba dark-gray b--black-10 mt4 w-100 mw5 center">
-    <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
-    <div class="pa2 ph3-ns pb3-ns">
-      <div class="dt w-100 mt1">
-        <div class="dtc">
-          <h2 class="f5 f4-ns mv0 ashblue ttu">Protect your reputation</h2>
-        </div>
-      </div>
-      <p class="f6 lh-copy measure mt2 mid-gray">
-        With the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright helps high-profile individuals and corporate leaders to take control of their public profile, online and offline
-      </p>
+<div class="mw9 center ph3-ns">
+  <div class="cf ph2-ns">
+    <div class="fl w-100 w-third-ns pa2">
+        <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
+          <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+          <div class="pa2 ph3-ns pb3-ns">
+            <div class="dt w-100 mt1">
+              <div class="dtc">
+                <h2 class="f5 f4-ns mv0 ashblue ttu">Protect your reputation</h2>
+              </div>
+            </div>
+            <p class="f6 lh-copy measure mt2 mid-gray">
+              With the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright helps high-profile individuals and corporate leaders to take control of their public profile, online and offline
+            </p>
+          </div>
+        </article>
     </div>
-    </article>
-  </div>
-  <div class="dtc-ns tc pt4">
-    <article class="br2 ba dark-gray b--black-10 mt4 w-100 mw5 center">
-    <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
-    <div class="pa2 ph3-ns pb3-ns">
-      <div class="dt w-100 mt1">
-        <div class="dtc">
-          <h2 class="f5 f4-ns mv0 ashblue ttu">Manage a crisis</h2>
-        </div>
-      </div>
-      <p class="f6 lh-copy measure mt2 mid-gray">
-        You will not be judged by the crises you face, but how you manage them. In the social media age, there is no time to waste when crisis hits. Whether a leadership succession, litigation, accident or personal crisis, you need to act fast and smart to manage expectations and turn a crisis into an opportunity.
-      </p>
+    <div class="fl w-100 w-third-ns pa2">
+        <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
+          <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+          <div class="pa2 ph3-ns pb3-ns">
+            <div class="dt w-100 mt1">
+              <div class="dtc">
+                <h2 class="f5 f4-ns mv0 ashblue ttu">Manage a crisis</h2>
+              </div>
+            </div>
+            <p class="f6 lh-copy measure mt2 mid-gray">
+              You will not be judged by the crises you face, but how you manage them. In the social media age, there is no time to waste when crisis hits. Whether a leadership succession, litigation, accident or personal crisis, you need to act fast and smart to manage expectations and turn a crisis into an opportunity.
+            </p>
+          </div>
+          </article>
     </div>
-    </article>
-  </div>
-  <div class="dtc-ns tc pt4">
-    <article class="br2 ba dark-gray b--black-10 mt4 w-100 mw5 center">
-    <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
-    <div class="pa2 ph3-ns pb3-ns">
-      <div class="dt w-100 mt1">
-        <div class="dtc">
-          <h2 class="f5 f4-ns mv0 ashblue ttu">Bring about change</h2>
-        </div>
+    <div class="fl w-100 w-third-ns pa2">
+         <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
+          <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
+          <div class="pa2 ph3-ns pb3-ns">
+            <div class="dt w-100 mt1">
+              <div class="dtc">
+                <h2 class="f5 f4-ns mv0 ashblue ttu">Bring about change</h2>
+              </div>
+            </div>
+            <p class="f6 lh-copy measure mt2 mid-gray">
+              Poor communication is one of the main causes of failure in change programmes. Ashbright has decades of experience working alongside senior leaders and management consultants on restructuring programmes to define strategy, engage stakeholders, overcome resistance and meet project deadlines.
+            </p>
+          </div>
+          </article>
       </div>
-      <p class="f6 lh-copy measure mt2 mid-gray">
-        Poor communication is one of the main causes of failure in change programmes. Ashbright has decades of experience working alongside senior leaders and management consultants on restructuring programmes to define strategy, engage stakeholders, overcome resistance and meet project deadlines.
-      </p>
     </div>
-    </article>
   </div>
 </div>
+
 
   <div class="tc mv4">
     <a class="ash-sans f5 link grow ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
