--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@ layout: no-nav
           <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
         </a>
         <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
-          <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="#" title="Home">Home</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="How it Works">Situations</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Blog">About</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Press">Contact</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#" title="Contact">Our people</a>
+          <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="/" title="Home">Home</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#about" title="About">About</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#situations" title="Situations">Situations</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="#contact" title="Contact">Contact</a>
         </div>
       </nav>
 
       <div class="mt4 mt6-l ph3 tc tl-l">
         <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
-        <a class="ash-sans f5 link grow ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Call to action</a>
+        <a class="ash-sans f5 link grow ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
       </div>
     </div>
   </div>
 </header>
 
-<section class="mw5 mw7-ns center pa3-l ph5-ns">
+<section id="about" class="mw5 mw7-ns center pa3-l ph5-ns">
   <h2 class="f1 ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
 
   <p class="f3 ph2 ph4-l tc-l lh-copy">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
@@ -36,7 +35,7 @@ layout: no-nav
   <p class="f1 ph2 ph4-l tc-l lh-copy">Ashbright helps companies, individuals and governments survive and thrive in this new environment</p>
 </section>
 
-<div class="mw9 center ph3-ns">
+<section id="situations" class="mw9 center ph3-ns">
   <div class="cf ph2-ns">
     <div class="fl w-100 w-third-ns pa2">
         <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
@@ -85,11 +84,10 @@ layout: no-nav
       </div>
     </div>
   </div>
-</div>
+</section>
 
+<section id="contact" class="tc mv4 pb5">
+  <a class="ash-sans f5 link grow ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
 
-  <div class="tc mv4">
-    <a class="ash-sans f5 link grow ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
-
-    <a class="ash-sans f5 link grow ph3 pv2 mb2 dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
-  </div>
+  <a class="ash-sans f5 link grow ph3 pv2 mb2 dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
+</section>
