--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <header>
-  <div class="cover bg-left bg-center-l" style="background-image: url({{site.baseurl }}/images/manhattan-407703.jpg)">
+  <div class="cover bg-left bg-center-l" style="background-image: url({{site.baseurl }}images/manhattan-407703.jpg)">
     <div class="bg-black-70">
 
       <nav class="db dt-l w-100 border-box pa3 ph3-l">
-        <a class="db dtc-l v-mid mid-gray link grow w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-          <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
+        <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+          <img class="mw4-5" src="{{ site.baseurl }}images/LOGO-RGB.png" alt="Ashbright">
         </a>
         <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
           <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="/" title="Home">Home</a>
@@ -21,7 +21,7 @@ layout: default
       <div class="mt4 mt6-l ph3 tc tl-l">
         <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
-        <a class="ash-sans f5 link grow ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
+        <a class="ash-sans f5 link dim ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
       </div>
     </div>
   </div>
@@ -43,7 +43,9 @@ layout: default
           <div class="pa2 ph3-ns pb3-ns">
             <div class="dt w-100 mt1">
               <div class="dtc">
-                <h2 class="f5 f4-ns mv0 ashblue ttu">Protect your reputation</h2>
+                <h2 class="f5 f4-ns mv0 ttu">
+                  <a class="ashblue link dim" href="{{ site.baseurl }}reputation">Protect your reputation</a>
+                 </h2>
               </div>
             </div>
             <p class="f6 lh-copy measure mt2 mid-gray">
@@ -86,8 +88,8 @@ layout: default
   </div>
 </section>
 
-<section id="contact" class="tc mv4 pb5">
-  <a class="ash-sans f5 link grow ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
+<section id="contact" class="tc mv4 pb5 pt3-l pb6-l">
+  <a class="ash-sans f5 link dim ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
 
-  <a class="ash-sans f5 link grow ph3 pv2 mb2 dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
+  <a class="ash-sans f5 link dim ph3 pv2 mb2 dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
 </section>
