Added situation pages.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ layout: default
           <div class="pa2 ph3-ns pb3-ns">
             <div class="dt w-100 mt1">
               <div class="dtc">
-                <h2 class="f5 f4-ns mv0 ashblue ttu">Manage a crisis</h2>
+                <h2 class="f5 f4-ns mv0 ttu">
+                  <a class="ashblue link dim" href="{{ site.baseurl }}crisis">Control a crisis</a>
+                 </h2>
               </div>
             </div>
             <p class="f6 lh-copy measure mt2 mid-gray">
@@ -75,7 +77,9 @@ layout: default
           <div class="pa2 ph3-ns pb3-ns">
             <div class="dt w-100 mt1">
               <div class="dtc">
-                <h2 class="f5 f4-ns mv0 ashblue ttu">Bring about change</h2>
+                <h2 class="f5 f4-ns mv0 ttu">
+                  <a class="ashblue link dim" href="{{ site.baseurl }}crisis">Bring about change</a>
+                 </h2>
               </div>
             </div>
             <p class="f6 lh-copy measure mt2 mid-gray">
