More baseurl tweaks.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
             <div class="dt w-100 mt1">
               <div class="dtc">
                 <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}/reputation">Protect your reputation</a>
+                  <a class="ashblue link dim" href="{{ site.baseurl }}reputation">Protect your reputation</a>
                  </h2>
               </div>
             </div>
@@ -61,7 +61,7 @@ layout: default
             <div class="dt w-100 mt1">
               <div class="dtc">
                 <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}/crisis">Control a crisis</a>
+                  <a class="ashblue link dim" href="{{ site.baseurl }}crisis">Control a crisis</a>
                  </h2>
               </div>
             </div>
@@ -78,7 +78,7 @@ layout: default
             <div class="dt w-100 mt1">
               <div class="dtc">
                 <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}/change">Bring about change</a>
+                  <a class="ashblue link dim" href="{{ site.baseurl }}change">Bring about change</a>
                  </h2>
               </div>
             </div>
