--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
       <nav class="db dt-l w-100 border-box pa3 ph3-l">
         <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-          <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
+          <img class="mw4-5" src="{{ site.baseurl }}images/LOGO-RGB.png" alt="Ashbright">
         </a>
         <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
           <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/" title="Home">Home</a>
