--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <header>
-  <div class="cover bg-left bg-center-l" style="background-image: url({{ site.baseurl }}images/manhattan-407703.jpg)">
+  <div class="cover bg-left bg-center-l" style="background-image: url({{ site.baseurl }}/images/manhattan-407703.jpg)">
     <div class="bg-black-70">
 
       <nav class="db dt-l w-100 border-box pa3 ph3-l">
         <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-          <img class="mw4-5" src="{{ site.baseurl }}images/LOGO-RGB.png" alt="Ashbright">
+          <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
         </a>
         <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
           <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/" title="Home">Home</a>
@@ -44,7 +44,7 @@ layout: default
             <div class="dt w-100 mt1">
               <div class="dtc">
                 <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}reputation">Protect your reputation</a>
+                  <a class="ashblue link dim" href="{{ site.baseurl }}/reputation">Protect your reputation</a>
                  </h2>
               </div>
             </div>
@@ -61,7 +61,7 @@ layout: default
             <div class="dt w-100 mt1">
               <div class="dtc">
                 <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}crisis">Control a crisis</a>
+                  <a class="ashblue link dim" href="{{ site.baseurl }}/crisis">Control a crisis</a>
                  </h2>
               </div>
             </div>
@@ -78,7 +78,7 @@ layout: default
             <div class="dt w-100 mt1">
               <div class="dtc">
                 <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}change">Bring about change</a>
+                  <a class="ashblue link dim" href="{{ site.baseurl }}/change">Bring about change</a>
                  </h2>
               </div>
             </div>
