Change the logo on the home layout.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
 
       <nav class="db dt-l w-100 border-box pa3 ph3-l">
         <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-          <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
+          <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB.png" alt="Ashbright">
         </a>
-        <div class="db dtc-l v-mid v-top-l w-100 w-75-l tc tr-l">
+        <div class="db dtc-l v-mid v-bottom-l w-100 w-75-l tc tr-l">
           <a class="ash-sans link hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/" title="Home">Home</a>
           <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#about" title="About">About</a>
           <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu"  href="#situations" title="Situations">Situations</a>
@@ -21,14 +21,14 @@ layout: default
       <div class="mt4 mt6-l ph3 tc tl-l">
         <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
-        <a class="ash-sans f5 link dim ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
+        <a class="ash-sans f5 link dim ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Get in touch</a>
       </div>
     </div>
   </div>
 </header>
 
 <section id="about" class="mw5 mw7-ns center pa3-l ph5-ns">
-  <h2 class="f1 ph2 ph4-l tc-l ashblue ttu">Why Ashbright?</h2>
+  <h2 class="f1 ph2 ph4-l tc-l ashblue ttu">What we do</h2>
 
   <p class="f3 ph2 ph4-l tc-l lh-copy">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
 
