Tweaks to header hero.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ layout: default
         </div>
       </nav>
 
-      <div class="mt4 mt6-l ph3 tc tl-l">
-        <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
-        <p class="fw1 f3 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
-        <a class="ash-sans f5 link dim ph3 pv2 mb4 dib black bg-ashblue ttu tracked" href="#0">Get in touch</a>
+      <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
+        <h1 class="f1 f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
+        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
+        <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="#0">Get in touch</a>
       </div>
     </div>
   </div>
