--- a/index.html
+++ b/index.html
@@ -19,81 +19,100 @@ layout: default
       </nav>
 
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
-        <h1 class="f1 f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
-        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3">We can help you thrive in the digital revolution</p>
+        <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
+        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3">The power of communication is limited only by our imagination</p>
         <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="#0">Get in touch</a>
       </div>
     </div>
   </div>
 </header>
 
-<section id="about" class="mw5 mw7-ns center pa3-l ph5-ns">
-  <h2 class="f1 ph2 ph4-l tc-l ashblue ttu">What we do</h2>
+<section id="about" class="mw7-ns center ph2 pa3-l ph5-ns">
+  <h2 class="f1 ph2 ph4-l ashblue ttu">Why are we here</h2>
 
-  <p class="f3 ph2 ph4-l tc-l lh-copy">The world has <span class="bb bw2 b--ashblue">fundamentally changed</span>. The digital revolution has disrupted old media and  consumers can’t tell the difference between marketing, news, propaganda and disinformation. Meanwhile, expectations are rising: consumers respond to <span class="bb bw2 b--ashblue">authenticity and immediacy</span>.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information and data makes new demands on all of us every day, especially those in leadership positions who must engage externally as much as they direct their own organisations.</p>
 
-  <p class="f1 ph2 ph4-l tc-l lh-copy">Ashbright helps companies, individuals and governments survive and thrive in this new environment</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">Communicating effectively is becoming more complex:</p>
+  <ul class="f3 lh-copy mt2">
+    <li>People demand authenticity and immediacy, but trust in authority, leaders and brands is at an historic low</li>
+    <li>The walls between marketing, news, propaganda and disinformation are disappearing as people have become the new media</li>
+    <li>Privacy and confidentiality are under threat</li>
+    <li>Activist journalism is seeing a renaissance, while trolls and bots are encroaching on the information space</li>
+    <li>Data and analytics have enabled unprecedented audience profiling and reach</li>
+  </ul>
 </section>
 
-<section id="situations" class="mw9 center ph3-ns">
-  <div class="cf ph2-ns">
-    <div class="fl w-100 w-third-ns pa2">
-        <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
-          <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
-          <div class="pa2 ph3-ns pb3-ns">
-            <div class="dt w-100 mt1">
-              <div class="dtc">
-                <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}/reputation">Protect your reputation</a>
-                 </h2>
-              </div>
-            </div>
-            <p class="f6 lh-copy measure mt2 mid-gray">
-              With the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright helps high-profile individuals and corporate leaders to take control of their public profile, online and offline
-            </p>
-          </div>
-        </article>
-    </div>
-    <div class="fl w-100 w-third-ns pa2">
-        <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
-          <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
-          <div class="pa2 ph3-ns pb3-ns">
-            <div class="dt w-100 mt1">
-              <div class="dtc">
-                <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}/crisis">Control a crisis</a>
-                 </h2>
-              </div>
-            </div>
-            <p class="f6 lh-copy measure mt2 mid-gray">
-              You will not be judged by the crises you face, but how you manage them. In the social media age, there is no time to waste when crisis hits. Whether a leadership succession, litigation, accident or personal crisis, you need to act fast and smart to manage expectations and turn a crisis into an opportunity.
-            </p>
-          </div>
-          </article>
-    </div>
-    <div class="fl w-100 w-third-ns pa2">
-         <article class="br2 ba dark-gray b--black-10 mt4 w-100 center">
-          <img src="http://lorempixel.com/g/600/300/business" class="db w-100 br2 br--top" alt="Photo of a kitten looking menacing.">
-          <div class="pa2 ph3-ns pb3-ns">
-            <div class="dt w-100 mt1">
-              <div class="dtc">
-                <h2 class="f5 f4-ns mv0 ttu">
-                  <a class="ashblue link dim" href="{{ site.baseurl }}/change">Bring about change</a>
-                 </h2>
-              </div>
-            </div>
-            <p class="f6 lh-copy measure mt2 mid-gray">
-              Poor communication is one of the main causes of failure in change programmes. Ashbright has decades of experience working alongside senior leaders and management consultants on restructuring programmes to define strategy, engage stakeholders, overcome resistance and meet project deadlines.
-            </p>
-          </div>
-          </article>
+
+<section id="situations" class="mw7-ns center ph2 pa3-l ph5-ns">
+  <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu">Situations</h2>
+  <article>
+    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
+          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h2 class="f2 ashblue ttu mt0-ns">Reputation</h2>
+          <p class="f3 f5-l lh-copy mt0">
+            As a high-profile individual, your reputation is a priceless asset. But with the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright has decades of experience helping high profile individuals and corporate leaders to manage their reputation in a disciplined way, ensuring that they maintain control over their public profile, online and offline.
+          </p>
+        </div>
       </div>
-    </div>
-  </div>
+    </a>
+  </article>
+<article>
+    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
+          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h2 class="f2 ashblue ttu mt0-ns">Crisis</h2>
+          <p class="f3 f5-l lh-copy mt0">
+            You will not be judged by the crises you face, but how you manage them. In the social media age, there is no time to waste when crisis hits. Whether a leadership succession, litigation, accident or personal crisis, you need to act fast and smart to manage expectations and turn a crisis into an opportunity.
+          </p>
+        </div>
+      </div>
+    </a>
+  </article>
+
+  <article>
+    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
+          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h2 class="f2 ashblue ttu mt0-ns">Transformation</h2>
+          <p class="f3 f5-l lh-copy mt0">
+            Poor communication is one of the main causes of failure in change programmes. Ashbright has decades of experience working alongside senior leaders and management consultants on restructuring programmes to define strategy, engage stakeholders, overcome resistance and meet project deadlines.
+          </p>
+        </div>
+      </div>
+    </a>
+  </article>
+
+  <article>
+    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
+          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h2 class="f2 ashblue ttu mt0-ns">Marketing</h2>
+          <p class="f3 f5-l lh-copy mt0">
+            A great product or service can still fail to meet targets without an effective communications campaign. Our work will ensure that you attract the attention of your key markets and stakeholders in an increasingly competitive marketplace through specialised content development and strategic media relations. Our work encompasses stakeholder mapping, peer benchmarking, media outreach, corporate content drafting, film scripts, social media content, speech writing and thought leadership positioning.
+          </p>
+        </div>
+      </div>
+    </a>
+  </article>
 </section>
 
-<section id="contact" class="tc mv4 pb5 pt3-l pb6-l">
-  <a class="ash-sans f5 link dim ph3 pv2 mb2 mr4-l dib black bg-ashblue ttu tracked" href="#0">Contact us</a>
 
-  <a class="ash-sans f5 link dim ph3 pv2 mb2 dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
+<section id="contact" class="mw6 mw7-ns center pv4 pv5-ns tc">
+  <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l mr3-ns dib white bg-ashblue ttu tracked" href="#0">Get in touch</a>
+
+  <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l ml3-ns dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
+
 </section>
