Change text and site titles.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Home
 ---
 
 <header>
@@ -27,7 +28,7 @@ layout: default
   </div>
 </header>
 
-<section id="about" class="mw7-ns center ph2 pa3-l ph5-ns">
+<section id="why" class="mw7-ns center ph2 pb4 pb5-ns pa3-l ph5-ns pb5-l pt5-ns">
   <h2 class="f1 ph2 ph4-l ashblue ttu">Why are we here</h2>
 
   <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information and data makes new demands on all of us every day, especially those in leadership positions who must engage externally as much as they direct their own organisations.</p>
@@ -40,6 +41,17 @@ layout: default
     <li>Activist journalism is seeing a renaissance, while trolls and bots are encroaching on the information space</li>
     <li>Data and analytics have enabled unprecedented audience profiling and reach</li>
   </ul>
+</section>
+
+<section id="about" class="bg-black">
+  <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pv5-l">
+    <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
+
+     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by Tom Ashby and Rupert Wright, based in London and Dubai and operating worldwide. We provide strategic communications counsel to companies, governments and successful individuals.</p>
+
+    <p class="f3 ph2 ph4-l lh-copy mt2 white">With decades of experience working across corporate communications, investor relations, international media and public affairs, we support clients in leadership positions to mobilise resources, shape perceptions and influence behaviour. We design and execute state-of-the-art communications programmes for a variety of situations including marketing communications and branding, corporate change, crisis and litigation, financial transactions and reputation management.</p>
+  <div>
+
 </section>
 
 
