Footer on different screens.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
         <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
-        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3">The power of communication is limited only by our imagination</p>
+        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">The power of communication is limited only by our imagination</p>
         <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="#0">Get in touch</a>
       </div>
     </div>
@@ -119,12 +119,4 @@ title: Home
       </div>
     </a>
   </article>
-</section>
-
-
-<section id="contact" class="mw6 mw7-ns center pv4 pv5-ns tc">
-  <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l mr3-ns dib white bg-ashblue ttu tracked" href="#0">Get in touch</a>
-
-  <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l ml3-ns dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
-
 </section>
