--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ title: Home
     <li>Activist journalism is seeing a renaissance, while trolls and bots are encroaching on the information space</li>
     <li>Data and analytics have enabled unprecedented audience profiling and reach</li>
   </ul>
+
+  <p class="f3 ph2 ph4-l lh-copy mt2">The forces of disruption and complexity in the business world demand high-level communications awareness from leaders</p>
+
+  <p class="f3 f-sub-ns ph2 ph4-l lh-copy mt2 mb3 i">Ashbright was created to help companies, individuals and governments survive and thrive in this new fast-moving landscape.</p>
 </section>
 
 <section id="about" class="bg-black">
@@ -61,7 +65,7 @@ title: Home
     <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">Reputation</h2>
@@ -76,7 +80,7 @@ title: Home
     <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          <img src="{{ site.baseurl }}/images/Storm_Clouds_-_License_for_£37_20_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/01309002-storm-clouds">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">Crisis</h2>
@@ -92,7 +96,7 @@ title: Home
     <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          <img src="{{ site.baseurl }}/images/Sidewalk_chess_-_License_for_£4_96_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/04785674-sidewalk-chess">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">Transformation</h2>
@@ -108,7 +112,7 @@ title: Home
     <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="http://mrmrs.github.io/photos/cpu.jpg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+          <img src="{{ site.baseurl }}/images/Hot_Air_Balloons_-_License_for_£12_39_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/0197175-hot-air-balloons">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">Marketing</h2>
