Match column padding on all sizes.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: Home
 </section>
 
 
-<section id="situations" class="mw7-ns center ph2 pa3-l ph5-ns">
+<section id="situations" class="mw7-ns center ph2 pv5-l ph5-ns ph4-l">
   <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu">Situations</h2>
   <article>
     <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
