Added bios and links.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title: Home
   <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pv5-l">
     <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by Tom Ashby and Rupert Wright, based in London and Dubai and operating worldwide. We provide strategic communications counsel to companies, governments and successful individuals.</p>
+     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. We provide strategic communications counsel to companies, governments and successful individuals.</p>
 
     <p class="f3 ph2 ph4-l lh-copy mt2 white">With decades of experience working across corporate communications, investor relations, international media and public affairs, we support clients in leadership positions to mobilise resources, shape perceptions and influence behaviour. We design and execute state-of-the-art communications programmes for a variety of situations including marketing communications and branding, corporate change, crisis and litigation, financial transactions and reputation management.</p>
   <div>
