--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ title: Home
     <a href="{{ situation.url }}" class="db pv1 ph2 ph0-l no-underline black dim">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/{{ situation.image }}" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
+          <img src="{{ site.baseurl }}/images/{{ situation.image }}-thumb.jpg" class="db" alt="{{ situation.title }}">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">{{ situation.title }}</h2>
