Show related situations on the situations layout.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Home
   {% for situation in site.situations %}
 
     <article>
-    <a href="{{ situation.url }}" class="db pv1 ph2 ph0-l no-underline black dim">
+    <a href="{{ situation.url }}" class="db pt5 ph2 ph0-l no-underline black dim">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
           <img src="{{ site.baseurl }}/images/{{ situation.image }}-thumb.jpg" class="db" alt="{{ situation.title }}">
