Installed jekyll-seo plugin.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Home
+description: Strategic communication
 ---
 
 <header>
@@ -61,7 +62,7 @@ title: Home
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">{{ situation.title }}</h2>
           <p class="f3 f5-l lh-copy mt0">
-            {{ situation.excerpt }}
+            {{ situation.description }}
           </p>
         </div>
       </div>
