Change home text.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@ description: Strategic communication
 </header>
 
 <section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l">
-  <h2 class="f1 ph2 ph4-l ashblue ttu">Why are we here</h2>
+  <h2 class="f1 ph2 ph4-l ashblue ttu">What we do</h2>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">The digital revolution makes new demands on all of us every day, especially high-profile organisations and the people who lead them.</p>
-
-  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright was created to help successful individuals, companies and governments survive and thrive in this new fast-moving landscape.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright is a strategic communications firm that provides counsel to governments, companies and successful individuals. We use data and intelligence to understand and engage people. We design and execute state-of-the-art programmes to enable leaders to mobilise resources, shape perceptions and influence behaviour.</p>
 
 </section>
 
@@ -42,7 +40,7 @@ description: Strategic communication
   <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pv5-l">
     <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. We provide strategic communications counsel to companies, governments and successful individuals. With decades of experience working across corporate communications, investor relations, international media and public affairs, we support clients in leadership positions to mobilise resources, shape perceptions and influence behaviour. We design and execute state-of-the-art communications programmes for a variety of situations including reputation and crisis management, change programmes and marketing communications.</p>
+     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. </p>
   </div>
 
 </section>
