Fixed up the home layout with new sections.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Strategic communication
 ---
 
 <header>
-  <div class="cover bg-left bg-center-l" style="background-image: url({{ site.baseurl }}/images/dubai-night-getty-bw.jpg)">
+  <div class="cover bg-left bg-center-l" style="background-image: url({{ site.baseurl }}/images/manhattan-407703.jpg)">
     <div class="bg-black-60">
 
       <nav class="db dt-l w-100 border-box pa3 ph3-l">
@@ -37,11 +37,51 @@ description: Strategic communication
 </section>
 
 <section id="about" class="bg-black">
-  <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pv5-l">
+  <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pt5-l pb4-l">
     <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
 
      <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. </p>
+
+     <p class="f3 ph2 ph4-l lh-copy mt2 white">Our services fall under three main categories</p>
   </div>
+
+  <div class="dt-ns dt--fixed-ns">
+  <div class="dtc-ns pa3 pa4-ns pt2">
+    <h2 class="f3 ashblue ttu">Research and strategy</h2>
+      <ul class="list pl0 white">
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Peer group analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Audience profiling and targeting</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Communications strategy</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Trends analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Channels analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Campaign planning</li>
+      </ul>
+  </div>
+  <div class="dtc-ns pa3 pa4-ns pt2">
+    <h2 class="f3 ashblue ttu">Content development</h2>
+      <ul class="list pl0 white">
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Messaging</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Issues management</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Thought leadership</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Trends analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Speechwriting</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Crisis management</li>
+      </ul>
+  </div>
+  <div class="dtc-ns pa3 pa4-ns pt2">
+    <h2 class="f3 ashblue ttu">Engagement</h2>
+    <ul class="list pl0 white">
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Media training</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Media relations</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Leadership support</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Relationship building</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Management reporting</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Feedback development</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Data analytics</li>
+    </ul>
+
+  </div>
+</div>
 
 </section>
 
@@ -52,7 +92,7 @@ description: Strategic communication
   {% for situation in site.situations %}
 
     <article>
-    <a href="{{ situation.url }}" class="db pt5 ph2 ph0-l no-underline black dim">
+    <a href="{{ situation.url }}" class="db pt4 ph2 ph0-l no-underline black dim">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
           <img src="{{ site.baseurl }}/images/{{ situation.image }}-thumb.jpg" class="db" alt="{{ situation.title }}">
@@ -68,6 +108,73 @@ description: Strategic communication
   </article>
 
   {% endfor %}
+
+</section>
+
+<section id="about" class="bg-black cf pa3 pa4-m pa5-l mw9 center">
+  <div class="fr w-100 w-80-l">
+    <p class="f6">
+      Sectors
+    </p>
+    <h1 class="f2 f1-l mt0 mb4 mb5-ns ttu white"><span class="ashblue">
+      Ashbright</span><br class="dn db-ns white"> works across a broad variety of sectors
+    </h1>
+  </div>
+  <div class="f6 lh-copy fl w-100 mb4-ns">
+    <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
+      <p>
+        Centre of Government
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        Citizenship-by-investment
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        Defence
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        Energy
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        Financial services
+      </p>
+    </div>
+  </div>
+
+  <div class="f6 lh-copy fl w-100 mb4">
+    <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
+      <p>
+        Fintech
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        High Net Worth Individuals
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+      Investment promotion
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        Royal Courts
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+      <p>
+        Sovereign Wealth and Investment Funds
+      </p>
+    </div>
+  </div>
 
 </section>
 
