Solid line underneath.

--- a/index.html
+++ b/index.html
@@ -49,35 +49,34 @@ description: Strategic communication
   <div class="dtc-ns pa3 pa4-ns pt2">
     <h2 class="f3 ashblue ttu">Research and strategy</h2>
       <ul class="list pl0 white">
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Peer group analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Audience profiling and targeting</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Communications strategy</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Trends analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Channels analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Campaign planning</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Peer group analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Audience profiling and targeting</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Communications strategy</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Trends analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Channels analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Campaign planning</li>
       </ul>
   </div>
   <div class="dtc-ns pa3 pa4-ns pt2">
     <h2 class="f3 ashblue ttu">Content development</h2>
       <ul class="list pl0 white">
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Messaging</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Issues management</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Thought leadership</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Trends analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Speechwriting</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Crisis management</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Messaging</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Issues management</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Thought leadership</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Trends analysis</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Speechwriting</li>
+        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Crisis management</li>
       </ul>
   </div>
   <div class="dtc-ns pa3 pa4-ns pt2">
     <h2 class="f3 ashblue ttu">Engagement</h2>
     <ul class="list pl0 white">
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Media training</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Media relations</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Leadership support</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Relationship building</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Management reporting</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Feedback development</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--white">Data analytics</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Media training and relations</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Leadership support</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Relationship building</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Management reporting</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Feedback development</li>
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Data analytics</li>
     </ul>
 
   </div>
