Remove the lines underneath.

--- a/index.html
+++ b/index.html
@@ -45,38 +45,38 @@ description: Strategic communication
      <p class="f3 ph2 ph4-l lh-copy mt2 white">Our services fall under three main categories</p>
   </div>
 
-  <div class="dt-ns dt--fixed-ns">
+  <div class="dt-ns dt--fixed-ns pb4">
   <div class="dtc-ns pa3 pa4-ns pt2">
     <h2 class="f3 ashblue ttu">Research and strategy</h2>
       <ul class="list pl0 white">
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Peer group analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Audience profiling and targeting</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Communications strategy</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Trends analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Channels analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Campaign planning</li>
+        <li class="lh-copy pt3">Peer group analysis</li>
+        <li class="lh-copy pt3">Audience profiling and targeting</li>
+        <li class="lh-copy pt3">Communications strategy</li>
+        <li class="lh-copy pt3">Trends analysis</li>
+        <li class="lh-copy pt3">Channels analysis</li>
+        <li class="lh-copy pt3">Campaign planning</li>
       </ul>
   </div>
   <div class="dtc-ns pa3 pa4-ns pt2">
     <h2 class="f3 ashblue ttu">Content development</h2>
       <ul class="list pl0 white">
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Messaging</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Issues management</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Thought leadership</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Trends analysis</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Speechwriting</li>
-        <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Crisis management</li>
+        <li class="lh-copy pt3">Messaging</li>
+        <li class="lh-copy pt3">Issues management</li>
+        <li class="lh-copy pt3">Thought leadership</li>
+        <li class="lh-copy pt3">Trends analysis</li>
+        <li class="lh-copy pt3">Speechwriting</li>
+        <li class="lh-copy pt3">Crisis management</li>
       </ul>
   </div>
   <div class="dtc-ns pa3 pa4-ns pt2">
     <h2 class="f3 ashblue ttu">Engagement</h2>
     <ul class="list pl0 white">
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Media training and relations</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Leadership support</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Relationship building</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Management reporting</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Feedback development</li>
-      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--solid b--white-30">Data analytics</li>
+      <li class="lh-copy pt3">Media training and relations</li>
+      <li class="lh-copy pt3">Leadership support</li>
+      <li class="lh-copy pt3">Relationship building</li>
+      <li class="lh-copy pt3">Management reporting</li>
+      <li class="lh-copy pt3">Feedback development</li>
+      <li class="lh-copy pt3">Data analytics</li>
     </ul>
 
   </div>
