Changed the images paths so they work with Jekyll SEO Tag plugin.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ description: Strategic communication
     <a href="{{ situation.url }}" class="db pt4 ph2 ph0-l no-underline black dim">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/{{ situation.image }}-thumb.jpg" class="db" alt="{{ situation.title }}">
+          <img src="{{ site.baseurl }}/{{ situation.thumbnail }}" class="db" alt="{{ situation.title }}">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">{{ situation.title }}</h2>
